# grepip

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
grepip/: pypi.py  run.py  utils.py
grepip/search/: __init__.py  base.py  gh.py
tests/: test_github.py  test_pypi.py
