[project]
name = "grepip"
version = "0.1.0"
description = "Search occurrences of regex patterns in PyPI pacakges."
authors = [{ name = "Xuanteng Huang", email = "xuanteng.huang@outlook.com" }]
dependencies = ["aiohttp>=3.12.13", "aiofiles>=24.1.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
dev = ["ruff>=0.12.2", "pre-commit>=4.2.0"]
[tool.pdm]
distribution = false
